<resources>
    <string name="app_name">Converter App</string>
    <string name="settings">Settings</string>

    <!--  Decimal Places  -->
    <string-array name="decimal_places">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!--  Default selected currencies  -->
    <string name="default_primary_currency">INR</string>

    <string-array name="default_selected_currencies">
        <item>EUR</item>
        <item>USD</item>
        <item>INR</item>
        <item>AUD</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>RUB</item>
    </string-array>

    <!--  Currency Array  -->
    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>SGD</item>
        <item>THB</item>
        <item>ZAR</item>
        <item>EXT</item>
    </string-array>


    <!--  UI Field names  -->
    <string name="currency_name">Name</string>
    <string name="currency_flag">Flag</string>
    <string name="currency_amount">Amount</string>
    <string name="currency_symbol">Symbol</string>
    <string name="currency_long_name">Long Name</string>

    <!--  Currency Conversion Rates URL (updated once per day)  -->
    <string name="ebc_daily_url">https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml</string>

    <!--  Currency Long Names  -->
    <string name="long_aud">Australian dollar</string>
    <string name="long_bgn">Bulgarian lev</string>
    <string name="long_brl">Brasilian real</string>
    <string name="long_cad">Canadian dollar</string>
    <string name="long_chf">Swiss franc</string>
    <string name="long_cny">Chinese yuan renminbi</string>
    <string name="long_czk">Czech koruna</string>
    <string name="long_dkk">Danish krone</string>
    <string name="long_eur">Euro</string>
    <string name="long_ext">Extra currency</string>
    <string name="long_gbp">Pound sterling</string>
    <string name="long_hkd">Hong Kong dollar</string>
    <string name="long_hrk">Croatian kuna</string>
    <string name="long_huf">Hungarian forint</string>
    <string name="long_idr">Indonesian rupiah</string>
    <string name="long_ils">Israeli shekel</string>
    <string name="long_inr">Indian rupee</string>
    <string name="long_isk">Icelandic krona</string>
    <string name="long_jpy">Japanese yen</string>
    <string name="long_krw">South Korean won</string>
    <string name="long_mxn">Mexican peso</string>
    <string name="long_myr">Malaysian ringgit</string>
    <string name="long_nok">Norwegian krone</string>
    <string name="long_nzd">New Zealand dollar</string>
    <string name="long_php">Philippine peso</string>
    <string name="long_pln">Polish zloty</string>
    <string name="long_ron">Romanian leu</string>
    <string name="long_rub">Russian rouble</string>
    <string name="long_sek">Swedish krona</string>
    <string name="long_sgd">Singapore dollar</string>
    <string name="long_thb">Thai baht</string>
    <string name="long_try">Turkish lira</string>
    <string name="long_usd">US dollar</string>
    <string name="long_zar">South African rand</string>
</resources>